<resources>
    <string name="app_name">Men in blackbox</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="black_box">Blackbox</string>
    <string name="mis_ratio">Mistake ratio</string>
    <string name="copi_with">Coping With</string>
    <string name="opensource_license">Open Source License</string>
    <string name="youtube_use_warning">You must have a YouTube app installed. \n\n If you have the YouTube app installed, you will need to change the setting from \ "Disable \" to \ 'Use \'.</string>
    <string name="my_email">ovsoc@daum.net</string>
    <string name="no_videos_found">​No images found</string>
    <string name="help">Help</string>
    <string name="portrait_mode">Portrait</string>
    <string name="landscape_mode">Landscape</string>
    <string name="please_select_the_player_mode">Please select the player mode</string>
    <string name="black_box_overseas">Blackbox</string>
    <string name="quit_app">Quit</string>
    <string name="leave_review">Review</string>
    <string name="query_blackbox_ko">한국 블랙박스 사고</string>
    <string name="query_mis_ratio">몇대몇 한문철</string>
    <string name="query_copi_with">자동차 사고 대처</string>
    <string name="query_blackbox_overseas">해외 블랙박스 사고</string>
</resources>