<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_blackbox">

    <fragment
        android:id="@+id/navigation_blackbox"
        android:name="io.github.ovso.blackbox.ui.main.fragment.VideoFragment"
        android:label="@string/black_box"
        tools:layout="@layout/fragment_video">
        <argument
            android:name="query"
            android:defaultValue="@string/query_blackbox_ko"
            app:argType="reference" />
    </fragment>
    <fragment
        android:id="@+id/navigation_mis_ratio"
        android:name="io.github.ovso.blackbox.ui.main.fragment.VideoFragment"
        android:label="@string/mis_ratio"
        tools:layout="@layout/fragment_video">
        <argument
            android:name="query"
            app:argType="reference"
            android:defaultValue="@string/query_mis_ratio" />
    </fragment>
    <fragment
        android:id="@+id/navigation_copi_with"
        android:name="io.github.ovso.blackbox.ui.main.fragment.VideoFragment"
        android:label="@string/copi_with"
        tools:layout="@layout/fragment_video">
        <argument
            android:name="query"
            app:argType="reference"
            android:defaultValue="@string/query_copi_with" />
    </fragment>
    <fragment
        android:id="@+id/navigation_black_box_overseas"
        android:name="io.github.ovso.blackbox.ui.main.fragment.VideoFragment"
        android:label="@string/black_box_overseas"
        tools:layout="@layout/fragment_video">
        <argument
            android:name="query"
            app:argType="reference"
            android:defaultValue="@string/query_blackbox_overseas" />
    </fragment>

</navigation>